# FLYUXC

./: .gitignore  ARCHITECTURE.md  ARRAY_IMPLEMENTATION.md  CMakeLists.txt  COMPILER_DESIGN.md  CONTRIBUTING.md  FLYUX_SYNTAX.md  IMPLEMENTATION_PROGRESS.md  LEXER_ANALYSIS.md  LEXER_COMPLETION_REPORT.md  LICENSE  MIXED_TYPE_SUMMARY.md  PARSER_DESIGN.md  README.md  README_CN.md  REFACTORING_COMPLETE.md  STATUS.md  WARNING_SYSTEM.md  build_demo.ll  build_demo2.ll  build_demo3.ll  debug_normalize.c  demo_simple  demo_simple.ll  demo_test  demo_test.ll  loop_test.ll  minimal  minimal_demo.ll  simple_parser_test.c  simple_working  simple_working.ll  t_obj.ll  test.ll  test_4_cases  test_abort  test_all_builtin_errors  test_array.ll  test_call  test_call.ll  (+38 more)
docs/: ARCHITECTURE.md  AUTO_BUILD_RUNTIME.md  BUILTIN_FUNCTIONS_STATUS.md  CODEGEN_REFACTOR_PLAN.md  COLOR_OUTPUT.md  DOCS_NAVIGATION.md  EXCLAMATION_SUFFIX_IMPLEMENTATION.md  EXTENDED_OBJECT_TYPES.md  FILE_IO_ANALYSIS.md  FILE_IO_DESIGN.md  FILE_IO_IMPLEMENTATION_SUMMARY.md  FLYUX_SYNTAX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  INDEX.md  JSON_IMPLEMENTATION_SUMMARY.md  MIXED_TYPE_COMPLETE.md  MIXED_TYPE_PLAN.md  OPERATOR_PRECEDENCE.md  PARSER_ACCEPTANCE_CRITERIA.md  PARSER_DESIGN_V2.md  PARSER_FIX_SUMMARY.md  PARSER_IMPLEMENTATION_PLAN.md  PARSER_IMPLEMENTATION_V2.md  POSITION_VERIFICATION.md  PROGRESS.md  PROGRESS_REPORT_2025_11_20.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_FILE_IO.md  README.md  README_CN.md  REFACTORING.md  REFACTOR_REPORT.md  RUNTIME_FILES.md  STATUS.md  TEST_REPORT.md  WARNING_SYSTEM.md  分号添加逻辑分析.md
docs/architecture/: ARCHITECTURE.md
docs/implementation/: ARRAY_IMPLEMENTATION.md  EXTENDED_OBJECT_TYPES.md  IMPLEMENTATION_PROGRESS.md  MEMORY_MANAGEMENT.md  PARSER_DESIGN.md  PARSER_IMPLEMENTATION.md  PROGRESS.md  RUNTIME_EMBEDDING.md  RUNTIME_FILES.md  RUNTIME_STATUS_ANALYSIS.md  STATUS.md
docs/reference/: BUILTIN_FUNCTIONS_STATUS.md  FLYUX_SYNTAX.md
include/flyuxc/: ast.h  error.h  flyuxc.h  frontend.h  io.h  lexer.h  llvm_compiler.h  mapper.h  normalize.h  utils.h  varmap.h  version.h
include/flyuxc/backend/: codegen.h  value.h
include/flyuxc/frontend/: ast.h  lexer.h  parser.h  varmap.h
include/flyuxc/utils/: arena.h  cli.h  string_pool.h
scripts/: generate_object_embedded.sh  generate_runtime_embedded.py
src/: main.c
src/backend/: embed_runtime.c  llvm_compiler.cpp  runtime_embedded.h  runtime_object_embedded.h
src/backend/codegen/: codegen.c  codegen.c.backup  codegen.c.bak  codegen_builtin.c  codegen_closure.c  codegen_expr.c  codegen_internal.h  codegen_stmt.c  codegen_utils.c
src/backend/runtime/: value_runtime.c  value_runtime_array.c  value_runtime_cast.c  value_runtime_ext.c  value_runtime_file.c  value_runtime_io.c  value_runtime_json.c  value_runtime_math.c  value_runtime_state.c  value_runtime_state_check.c  value_runtime_string.c  value_runtime_value.c
src/core/: cli.c  error.c  io.c  lexer.c  lexer.c.backup  mapper.c  normalize.c  normalize_comments.c  normalize_filter.c  normalize_format.c  normalize_split.c  varmap.c
src/frontend/lexer/: lexer.c  normalize.c  normalize_comments.c  normalize_filter.c  normalize_format.c  normalize_split.c  varmap.c
src/frontend/parser/: ast.c  parser.c
src/utils/cli/: cli.c
src/utils/io/: io.c
src/utils/memory/: arena.c
src/utils/string/: string_pool.c
testfx/: TEST_RESULTS.txt  complex_test.fx  comprehensive_test.fx  demo.fx  demo_complete.fx  demo_simplified.fx  error_display_test.fx  file_io_extended.fx  file_io_test.fx  final_lexer_test.fx  full_demo.fx  json_extended_types.fx  minimal_assign.fx  minimal_demo.fx  object_test.fx  operator_precedence_test.fx  priority_validation.fx  simple_assign.fx  simple_error.fx  simple_obj.fx  test45.fx  test6lines.fx  test7.fx  test_4_cases.fx  test_abort.fx  test_chain.fx  test_emoji.fx  test_empty_colors.fx  test_error_handling.fx  test_errors.fx  test_exclamation.fx  test_features.fx  test_file_io_abort.fx  test_fileio_errors.fx  test_full_mixed.fx  test_func.fx  test_func_call.fx  test_func_simple.fx  test_increment.fx  test_inline_comment.fx  (+19 more)
testfx/const/: basic_const.fx  closure_array_const.fx  complex_const_closure.fx  const_closure.fx  const_reassign_error.fx  const_scope_shadow.fx  mini.fx  multi_closure_shared.fx  nested_closure_const.fx  simple_const_capture.fx  simple_const_closure.fx  simple_nested_scope.fx  test_direct_closure.fx  test_object_method.fx  test_simple.fx
testfx/edge_cases/: builtin_functions_test.fx  complete_demo.fx  demo_comprehensive.fx  lexer_new_features.fx  test_chain.fx  test_comment.fx  test_demo_simple.fx  test_dup_a.fx  test_obj_space2.fx  test_print.fx  test_type5.fx  testtype_noconflict.fx
testfx/error_tests/: comprehensive_errors.fx  test_emoji_error.fx  test_empty_expr.fx  test_invalid_assignment.fx  test_invalid_lvalue_number.fx  test_invalid_lvalue_string.fx  test_invalid_operator.fx  test_missing_comma.fx  test_missing_semicolon.fx  test_trailing_comma.fx  test_unclosed_array.fx  test_unclosed_paren.fx  test_wrong_arg_count.fx
testfx/errors/error_tests/: edge_01_invalid_keyword.fx  edge_02_let_keyword.fx  edge_03_const_keyword.fx  edge_04_var_keyword.fx  edge_05_function_keyword.fx  edge_06_else_keyword.fx  edge_07_for_keyword.fx  edge_08_while_keyword.fx  edge_09_return_keyword.fx  edge_10_break_continue.fx  edge_11_arrow_function.fx  edge_12_strict_equal.fx  edge_13_try_catch.fx  edge_14_double_colon.fx  edge_15_correct_if.fx  edge_16_correct_if_else.fx  edge_17_mixed_syntax.fx  edge_18_python_syntax.fx  edge_19_async_await.fx  edge_20_import_export.fx  edge_21_class_new.fx  edge_22_weird_operators.fx  edge_23_type_keywords.fx  edge_24_logic_keywords.fx  edge_25_special_values.fx  (+48 more)
testfx/invalid/: deprecated_length.fx  duplicate_decl_test.fx  loop_var_leak_test.fx
testfx/valid/: array_sum_test.fx  builtin_functions_test.fx  demo.fx  dynamic_obj_demo.fx  mega_demo.fx  showcase_demo.fx  test_bracket_access.fx  test_user_modify.fx  try_catch_test.fx
testfx/warnings/: test_warnings_inline.fx
(+220 files in other folders)
